# silpo1

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt  silpo1_patch.diff  tsconfig.json
.github/workflows/: silpo_full.yml  silpo_full_scraper.yml
data/: .gitkeep
scripts/: __init__.py  run_silpo_full.py
src/: config.ts
src/silpo/: __init__.py  api_client.py  api_discovery.py  config.py  db.py  export.py  exporter.py  extractors.py  html_scraper.py  log.py  logger.py  logutil.py  model.py  run.py  run_full.py  scraper.py
src/silpo/sinks/: csv_sink.py  sqlite_sink.py  xlsx_sink.py
src/utils/: logger.ts  text.ts
